[build-system]
build-backend = "setuptools.build_meta"
requires = [
  "setuptools",
  "setuptools-scm>=8.0.4",
]

[project]
name = "accurate_molmass"
description = "分子量、mz等常用预测"
readme = "README.md"
keywords = [
  "Chemical",
  "Molecular Mass",
]
license = {file = "license/copyright"}
maintainers = [
  {name = "Lvjun Guo", email = "guolj@dp.tech"},
]
authors = [
  {name = "Lvjun Guo", email = "guolj@dp.tech"},
]
requires-python = ">=3.10"
classifiers = [
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dynamic = [
  "version",
]
dependencies = [
    "setuptools_scm",
]

[tool.setuptools]
packages = ["accurate_molmass"]

[tool.setuptools_scm]
write_to = "accurate_molmass/_version.py"
write_to_template = "version = __version__ = {version!r}\nversion_tuple = __version_tuple__ = {version_tuple!r}\nrevision = __revision__ = {scm_version.node!r}\n"

[tool.black]
line-length = 120

[tool.isort]
line_length = 120
profile = "black"

[tool.flake8]
max-line-length = 120

[tool.pytest.ini_options]
addopts = "--doctest-modules --cov"
